@@ -26,10 +26,18 @@
   <!--no "contrib_url"-->
   <comments>
     <en>
+
     Probably one of the most expensive winprinters, the specification
     says &quot;ESC/Page S (Host based)&quot;. The free laser printer
     drivers published by Epson for their other AcuLaser and EPL models
-    do not cover this printer.
+    do not cover this printer.&lt;p&gt;
+
+    Perhaps this printer works with the non-free (but free of charge)
+    &lt;a
+    href="http://www.epkowa.co.jp/english/linux_e/lpd_e.html"&gt;Epson
+    Kowa Photo Image Print System Plus&lt;/a&gt; for the Epson
+    AcuLaser C900 (this printer uses also ESC/Page S).&lt;p&gt;
+
     </en>
   </comments>
 </printer>
