@@ -1,0 +1,39 @@
+<printer id="printer/Epson-AcuLaser_C900">
+  <make>Epson</make>
+  <model>AcuLaser C900</model>
+  <mechanism>
+    <laser/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en></en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.epson.co.uk/product/printers/lasers/alasc900/index.htm</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>F</functionality>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    The specification says &quot;ESC/Page S (Host based)&quot;. The
+    free laser printer drivers published by Epson for their other
+    AcuLaser and EPL models do not cover this printer but the non-free
+    (but free of charge) &lt;a
+    href="http://www.epkowa.co.jp/english/linux_e/lpd_e.html"&gt;Epson
+    Kowa Photo Image Print System Plus&lt;/a&gt; supports this model.
+
+    </en>
+  </comments>
+</printer>
