@@ -1,15 +1,19 @@
 2003-10-27  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/Epson-AcuLaser_C1000.xml: Updated text.
+
 	* printer/Epson-Stylus_C63.xml, printer/Epson-Stylus_C64.xml,
 	  printer/Epson-PX_V500.xml, printer/Epson-Stylus_CX6400.xml,
 	  printer/Epson-Stylus_CX8400.xml: Added new inkjet printers from
 	  Epson.
 
-	* printer/Epson-AcuLaser_C1900.xml,
+	* printer/Epson-AcuLaser_C900.xml,
+	  printer/Epson-AcuLaser_C1900.xml,
 	  printer/Epson-AcuLaser_C1900PS.xml, driver/Postscript.xml,
 	  driver/lj4dith.xml, driver/ljet4.xml, opt/159.xml, opt/6.xml,
 	  opt/Postscript-Resolution.xml,
-	  opt/pxlmono-PrinterResolution.xml: Added Epson AcuLaser C1900.
+	  opt/pxlmono-PrinterResolution.xml: Added Epson AcuLaser C900 and
+	  C1900.
 
 	* driver/epl2750.xml, driver/alc1900.xml, opt/145.xml,
 	  opt/159.xml, opt/2.xml, opt/eplXXXX-Collate.xml,
